--- a/bau.bib
+++ b/bau.bib
@@ -532,3 +532,45 @@
   year={1994},
   organization={Springer}
 }
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% BOOK
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@book{trefethen1997numerical,
+  title={Numerical Linear Algebra},
+  author={Trefethen, Lloyd N and Bau, David},
+  year={1997},
+  publisher={SIAM}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% MISCELLANEOUS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@misc{ndif,
+  author={Bau, David and Wallace, Byron and Guha, Arjun and Bell, Jonathan and Brodley, Carla},
+  title={{National Deep Inference Fabric}},
+  month={5},
+  year={2024},
+  note={\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2408455}{NSF \#2408455}},
+  url={https://ndif.us/}
+}
+
+@misc{bau2024resilience,
+  author={Bau, David},
+  title={Creating a Resilient {AI} Ecosystem with {NDIF} and {NNsight}},
+  month={7},
+  year={2024},
+  note={\href{https://resilience.baulab.info/}{resilience.baulab.info}},
+  url={https://resilience.baulab.info/}
+}
+
+@misc{dsthoughts,
+  author={Rager, Can and Bau, David},
+  title={Auditing {AI} Bias: The {DeepSeek} Case},
+  month={1},
+  year={2025},
+  note={\href{https://dsthoughts.baulab.info/}{dsthoughts.baulab.info}},
+  url={https://dsthoughts.baulab.info/}
+}
