Add AI Action Plan RFI policy white paper to bau.bib

--- a/bau.bib
+++ b/bau.bib
@@ -574,3 +574,13 @@
   note={\href{https://dsthoughts.baulab.info/}{dsthoughts.baulab.info}},
   url={https://dsthoughts.baulab.info/}
 }
+
+@misc{bau2025aiactionplan,
+  author={Bau, David},
+  title={{AI} Dominance Requires Interpretability},
+  howpublished={Response to OSTP/NSF Request for Information on the Development of an Artificial Intelligence Action Plan},
+  month={3},
+  year={2025},
+  note={\href{https://resilience.baulab.info/docs/AI_Action_Plan_RFI.pdf}{Policy White Paper}},
+  url={https://resilience.baulab.info/docs/AI_Action_Plan_RFI.pdf}
+}
