Add coauthors and full title to AI Action Plan RFI entry

--- a/bau.bib
+++ b/bau.bib
@@ -576,8 +576,8 @@
 }
 
 @misc{bau2025aiactionplan,
-  author={Bau, David},
-  title={{AI} Dominance Requires Interpretability},
+  author={Bau, David and McGrath, Tom and Schwettmann, Sarah and Hadfield-Menell, Dylan},
+  title={{AI} Dominance Requires Interpretability and Standards for Transparency and Security},
   howpublished={Response to OSTP/NSF Request for Information on the Development of an Artificial Intelligence Action Plan},
   month={3},
   year={2025},
