Add Opt-In Art paper (NeurIPS 2025)

--- a/bau.bib
+++ b/bau.bib
@@ -118,6 +118,14 @@
   note={\href{https://arxiv.org/abs/2507.11878}{arXiv:2507.11878}}
 }
 
+@inproceedings{ren2025optinart,
+  title={Opt-In Art: Learning Art Styles Only from Few Examples},
+  author={Ren, Hui and Materzy{\'n}ska, Joanna and Gandikota, Rohit and Daras, Giannis and Bau, David and Torralba, Antonio},
+  booktitle={Advances in Neural Information Processing Systems 39 (NeurIPS)},
+  year={2025},
+  note={\href{https://arxiv.org/abs/2412.00176}{arXiv:2412.00176}}
+}
+
 @inproceedings{gandikota2025sliderspace,
   title={SliderSpace: Decomposing the Visual Capabilities of Diffusion Models},
   author={Gandikota, Rohit and Wu, Zongze and Zhang, Richard and Bau, David and Shechtman, Eli and Kolkin, Nick},
